Fixed some alignement issues. Added isolated scss for overriding material dashboard items

--- a/resources/assets/sass/dashboard.scss
+++ b/resources/assets/sass/dashboard.scss
@@ -260,6 +260,10 @@
       border-color: #E5E5E5;
       transition: .2s;
   }
+
+  .register-page .card-signup .input-group .input-group-addon {
+    padding-top: 30px !important;
+  }
 }
 
 .material-icons-lg {
